# rust-test-s3-upload

./: Cargo.toml
src/: main.rs
