[package]
name = "rust-test-s3-upload"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = { version="0.49.0", features=["hardcoded-credentials"] }
http = "0.2.8"
serde = "^1.0.0"
serde_derive = "^1.0.145"
serde_json = "^1.0.0"
tokio = { version = "^1.21.2", features = ["rt", "macros", "sync", "time", "net", "io-util"]}
toml = "^0.5.9"
